--- a/inc/css/dark.light.unicorn.css
+++ b/inc/css/dark.light.unicorn.css
@@ -650,9 +650,8 @@ input[type="radio"] {
   height: 1em;
   width: 1em;
 }
-input.textarea,
 textarea {
-  height: 4em;
+  height: 4.5em;
 }
 
 button,
@@ -678,6 +677,10 @@ input[type="submit"]:focus {
 button, input, select, textarea {
   padding-left: 0.5em;
   padding-right: 0.5em;
+}
+textarea {
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
 }
 option {
   padding: var(--gutter) 0;
@@ -1636,9 +1639,8 @@ and ( max-width: 1280px ) {
     height: calc( 540px + ( 180 * ( ( 100vw - 960px ) / 320 ) ) );
   }
 
-  input.textarea,
   textarea {
-    height: 6em;
+    height: 6.5em;
   }
 
   .break-cut {
