--- a/inc/css/dark.light.unicorn.css
+++ b/inc/css/dark.light.unicorn.css
@@ -979,6 +979,11 @@ div.logo img {
   padding: 2.4em 3.2em;
 }
 
+img.grayscale {
+  /* filter: grayscale(1); */
+  filter: saturate(0);
+}
+
 a.project-thumbnail img {
   filter: saturate(0.25);
 }
